Bug 53353. Factor nsMemoryImpl create/destroy from flusher thread startup/shutdown. Avoids creation of second memory flusher thread after XPCOM shutdown. r=scc, sr=warren